--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@nuxtjs/toast": "^3.3.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "nuxt-socket-io": "^2.0.3",
+    "socket.io-client": "^4.4.1",
     "vue": "^2.6.14",
     "vue-advanced-cropper": "^1.10.0",
     "vue-server-renderer": "^2.6.14",
