--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "memebook-nuxt",
   "version": "1.0.0",
   "private": true,
+  "engines" : {
+    "node" : ">=14.0.0 <15.0.0"
+  },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
